objects/ssot__CareProgramEnrolleeProduct__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CareProgramEnrolleeId__c</fullName>
        <label>Care Program Enrollee</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramEnrolleeProductStatus__c</fullName>
        <label>Care Program Enrollee Product Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProductId__c</fullName>
        <label>Care Program Product</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareProgramProviderId__c</fullName>
        <label>Care Program Provider</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Care Program Enrollee Product Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716666654769_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrolleeProduct_CareProgr_rel</label>
        <referenceTo>ssot__CareProgramEnrollee__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrolleeProduct_CareProgr_rel</relationshipLabel>
        <relationshipName>rel_1716666654769_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726571640_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrolleeProduct_CareProgr_rel</label>
        <referenceTo>ssot__CareProgramProviderProduct__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrolleeProduct_CareProgr_rel</relationshipLabel>
        <relationshipName>rel_1716726571640_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726581942_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CareProgramEnrolleeProduct_CareProgr_rel</label>
        <referenceTo>ssot__CareProgramProduct__dlm</referenceTo>
        <relationshipLabel>CareProgramEnrolleeProduct_CareProgr_rel</relationshipLabel>
        <relationshipName>rel_1716726581942_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>